 - = Features that has been removed

1.9 beta 7 (2011-08-??)
 ! Calculation problem in MGMaps atlas format (fix by Pierre-Luc Paour)
 ! Custom mapsource from RMaps SQLite atlas shows wrong zoom levels 
 - Removed map source: Open Cycle Map (request by Andy Allan)
 + New map source: OSMapa-Topo (Poland)
 + Map source tile store coverage: button for hiding colored layer added
 + OziExplorer/Trekbuddy: MM1B calculation improved (patch by MrPete #3026830) 

1.9 beta 6 (2011-06-21)
 + New atlas format: Geocaching Live offline maps
 + New atlas format: MBTiles (Experimental)
 + New atlas format: Paper Atlas (PDF) & Paper Atlas (PNG) 
    [provided by Ľubomír Vasek] 
 ! Bug #3316081 - "String index out of range: -1" upon map sources update 
 ! Incorrect selection and tile count calculation 
 + New map source: Moldova (point.md)

1.9 beta 5 (2011-05-17)
 + Added possibility Change directory syntax for file and zip based map sources 
    from zoom/x/y to zoom/y/x ("flipXYDir")
 + Added possibility to use <localTileFiles> and <localTileZip> within a custom 
    multi-layer map source
 ! CustomMultiLayerMapSource: "null" error when loading
 ! directories.ini: mobac.atlasprofilesdir not used for loading profiles list
 + directories.ini: System variables can be used in the form ${VARNAME}
 + Local map sources from SQLite atlases can now be used - supported formats are 
    RMaps, MBTiles, BigPlanetTracks, Galileo, NaviComputer
 ! Fixed OpenStreetMap Cycle Map
 + Experimental: adding user-defined polygon maps
 ~ Changed polygon selection behavior - selection stays now after adding it 
 
1.9 beta 4 (2011-05-02)
 ~ Problem loading tile image type for custom map sources (ends up for TrekBuddy 
    atlas format in an NullPointerException like in bug #3290976
 ~ Settings dialog now lists all tile stores - not only the stores of loaded map 
    sources
 + Experimental: Polygonal map derived from GPX track segment
 ! Endless opening of exception dialog (endless recursion)
